# KedroProyecto

./: .dockerignore  .dvcignore  .gitignore  Dockerfile.airflow  README.md  README_DOCKER.md  README_DVC.md  airflow_logging_config.py  docker-compose.yml  dvc.yaml  iniciar_jupyter.bat  iniciar_jupyter.ps1  pyproject.toml  requirements-airflow.txt  requirements.txt
Explicativos/: ANALISIS_CLASIFICACION.md  ANALISIS_CLUSTERING.md  ANALISIS_DATA_PROCESSING.md  ANALISIS_REGRESION.md  GUIA_EJECUCION.md
conf/base/: catalog.yml
dags/: __init__.py  kedro_data_processing_dag.py  kedro_data_science_dag.py  kedro_master_dag.py  kedro_reporting_dag.py
logs/: .gitkeep
notebooks/: 01_Reporte_Data_Processing.ipynb  02_Reporte_Clustering.ipynb  03_Reporte_Clasificacion.ipynb  04_Reporte_Regresion.ipynb  05_Resumen_General.ipynb
plugins/: __init__.py
src/proyecto_kedro/: __init__.py  __main__.py  settings.py
src/proyecto_kedro/pipelines/data_processing/: nodes.py  pipeline.py
src/proyecto_kedro/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
src/proyecto_kedro/pipelines/reporting/: nodes.py  pipeline.py
tests/pipelines/data_science/: test_pipeline.py
